--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -4,7 +4,7 @@
 title = "Overfarm Launcher"
 
 [ejs.landing]
-mediaGitHubURL = "https://github.com/cedr0u/OverfarmLauncher"
+mediaGitHubURL = "https://overfarm.fr/"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
 mediaYouTubeURL = "#"
