--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -8,7 +8,7 @@ mediaGitHubURL = "https://overfarm.fr/"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
 mediaYouTubeURL = "#"
-mediaDiscordURL = "https://discord.gg/lameute"
+mediaDiscordURL = "https://discord.gg/5pFUANYwCj"
 
 [ejs.settings]
 sourceGithubLink = "https://github.com/cedr0u/OverfarmLauncher"
